重构java启动脚本